added some more stuff

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
-    <title>Personal WebsiteDocument</title>
+    <title>Personal Website</title>
 </head>
 <body>
     <header>
@@ -18,6 +18,7 @@
                 <li><a href="#contact"> Contact</a></li>
             </ul>   
         </nav>
+        
     <div class = "title">
         <div class = "name">
             <h1>Lyne Cha</h1>
@@ -35,19 +36,25 @@
 
 <div class="about-me">
     <section>
+        <img src="lynecha.jpg" class="prof-pic">
             <h1 style="margin-bottom: 20px">Hi! I'm Lyne</h1>
-            <p style="margin-bottom: 32px">I graduated from UC Berkeley with an Economics degree in 2019 and worked as an accoutant at PwC for the past 2 years.
+            <p style="margin-bottom: 32px">I graduated from UC Berkeley with an Economics degree back in 2019 and worked as an accoutant at PwC for the past 2 years.
                 <br/>
-                I quit my job enrolled in Rithm's coding bootcamp to pursue my passion in computer science and web development.
+                After I decided to take the leap of faith, I quit my job and enrolled in Rithm's coding bootcamp to pursue my passion in computer science and web development.
                 <br/>
-                I am currently looking for a full time software engineering job and would love to connect!
+                I am currently looking for a full time software engineering position and would love to connect if you have something in mind!
             </p>
     </section>
-    <section>
-        <h3>Contact</h3>
-        <h4>Let's connect!</h4>
-        Email me at lynechacha@gmail.com
-    </section>
 </div>
+    <footer>
+        <h3>Contact</h3>
+        <h4>I'd Love To Connect With You</h4>
+        <ul class="footer-nav">
+            <li><a href="https://github.com/lynecha" target="_blank" rel="noopener">My Projects</a></li> 
+            <li><a href="mailto:lynechacha@gmail.com" target="_blank" rel="noopener">My Email</a></li> 
+            <li><a href="https://www.linkedin.com/in/lynecha/" target="_blank" rel="noopener">My Network</a></li>
+        </ul>
+    </footer>
+
 </body>
 </html>
