added scroll features diff background

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
             <ul>
                 <li><a href="#"> Home</a></li>
                 <li><a href="#about"> About</a></li>
+                <li><a href="#projects"> Projects</a></li>
                 <li><a href="https://docs.google.com/document/d/1ftEGI4X7KEDTmrXiAGetZymxsA93kYfaA4jFgAWXM5k/edit?usp=sharing" target="_blank" rel="noopener">Resume</a></li>
                 <li><a href="#contact"> Contact</a></li>
             </ul>   
         </nav>
+    
         
     <div class = "title">
         <div class = "name">
@@ -34,10 +36,11 @@
     </div>
 </header>
 
-<div class="about-me">
+<div class="about-me" id="about">
     <section>
+        <h3>About</h3>
         <img src="lynecha.jpg" class="prof-pic">
-            <h1 style="margin-bottom: 20px">Hi! I'm Lyne</h1>
+            <h1 style="margin-bottom: 20px">Let me introduce myself</h1>
             <p style="margin-bottom: 32px">I graduated from UC Berkeley with an Economics degree back in 2019 and worked as an accoutant at PwC for the past 2 years.
                 <br/>
                 After I decided to take the leap of faith, I quit my job and enrolled in Rithm's coding bootcamp to pursue my passion in computer science and web development.
@@ -46,7 +49,17 @@
             </p>
     </section>
 </div>
-    <footer>
+<div class="projects" id="projects">
+    <section>
+        <h1>Projects</h1>
+        <ul>
+            <li id="project1"></li>
+            <li id="project2"></li>
+            <li id="project3"></li>
+        </ul>
+    </section>
+</div>
+    <footer id="contact">
         <h3>Contact</h3>
         <h4>I'd Love To Connect With You</h4>
         <ul class="footer-nav">
