added more pics/worked on projects section

--- a/index.html
+++ b/index.html
@@ -39,24 +39,31 @@
 <div class="about-me" id="about">
     <section>
         <h3>About</h3>
-        <img src="lynecha.jpg" class="prof-pic">
-            <h1 style="margin-bottom: 20px">Let me introduce myself</h1>
-            <p style="margin-bottom: 32px">I graduated from UC Berkeley with an Economics degree back in 2019 and worked as an accoutant at PwC for the past 2 years.
-                <br/>
-                After I decided to take the leap of faith, I quit my job and enrolled in Rithm's coding bootcamp to pursue my passion in computer science and web development.
-                <br/>
-                I am currently looking for a full time software engineering position and would love to connect if you have something in mind!
-            </p>
+        <h1 style="margin-bottom: 20px">Let me introduce myself</h1>
+            <img src="lynecha.jpg" class="prof-pic">
+                <p style="margin-bottom: 32px">I graduated from UC Berkeley with an Economics degree back in 2019 and worked as an accoutant at PwC for the past 2 years.
+                    <br/>
+                    After I decided to take a leap of faith, I quit my job and enrolled in Rithm's coding bootcamp to pursue my passion in computer science and web development.
+                    <br/>
+                    I am currently looking for a full time software engineering position and would love to connect if you have something in mind!
+                </p>
+        </div>
     </section>
 </div>
 <div class="projects" id="projects">
     <section>
-        <h1>Projects</h1>
-        <ul>
-            <li id="project1"></li>
-            <li id="project2"></li>
-            <li id="project3"></li>
-        </ul>
+        <h1 style="margin-bottom: 20px">Projects</h1>
+        <div class="container">
+            <div id="project1"></div>
+            <div id="project2"></div>
+            <div id="project3"></div>
+            <div id="project4"></div>
+            <div id="project5"></div>
+            <div id="project6"></div>
+            <div id="project7"></div>
+            <div id="project8"></div>
+
+        </div>
     </section>
 </div>
     <footer id="contact">
