--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 </div>
 <div class="projects" id="projects">
     <section>
-        <h1 style="margin-bottom: 20px">Projects</h1>
+        <h3 style="margin-bottom: 20px">Projects</h3>
+        <h1>What I'm working on</h1>    
         <div class="container">
             <div id="project1"></div>
             <div id="project2"></div>
