working on contact section

--- a/index.html
+++ b/index.html
@@ -67,15 +67,14 @@
         </div>
     </section>
 </div>
-    <footer id="contact">
+    <section class="contact" id="contact">
         <h3>Contact</h3>
-        <h4>I'd Love To Connect With You</h4>
-        <ul class="footer-nav">
-            <li><a href="https://github.com/lynecha" target="_blank" rel="noopener">My Projects</a></li> 
-            <li><a href="mailto:lynechacha@gmail.com" target="_blank" rel="noopener">My Email</a></li> 
-            <li><a href="https://www.linkedin.com/in/lynecha/" target="_blank" rel="noopener">My Network</a></li>
-        </ul>
-    </footer>
-
+        <h1>I'd Love To Connect With You</h1>
+            <ul class="footer-nav">
+                <li><a href="https://github.com/lynecha" target="_blank" rel="noopener">My Projects</a></li> 
+                <li><a href="mailto:lynechacha@gmail.com" target="_blank" rel="noopener">My Email</a></li> 
+                <li><a href="https://www.linkedin.com/in/lynecha/" target="_blank" rel="noopener">My Network</a></li>
+            </ul>
+    </section>
 </body>
 </html>
