worked on contacts

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <ul class="social">
                 <div class= "icons">
                     <li><a href="https://github.com/lynecha" target="_blank" rel="noopener"><i class="fa-brands fa-github"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/lynecha/" target="_blank" rel="noopener"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/lynecha/" target="_blank" rel="noopener"><i class="fa-brands fa-linkedin"></i></i></a></li>
                     <li><a href="mailto:lynechacha@gmail.com" target="_blank" rel="noopener"><i class="fa fa-envelope"></i></a></li>
                 </div>
              </ul>
@@ -71,9 +71,9 @@
         <h3>Contact</h3>
         <h1>I'd Love To Connect With You</h1>
             <ul class="footer-nav">
-                <li><a href="https://github.com/lynecha" target="_blank" rel="noopener">My Projects</a></li> 
-                <li><a href="mailto:lynechacha@gmail.com" target="_blank" rel="noopener">My Email</a></li> 
-                <li><a href="https://www.linkedin.com/in/lynecha/" target="_blank" rel="noopener">My Network</a></li>
+                <li><a href="https://github.com/lynecha" target="_blank" rel="noopener"><i class="fa-brands fa-github"></i> https://github.com/lynecha</a></li> 
+                <li><a href="mailto:lynechacha@gmail.com" target="_blank" rel="noopener"><i class="fa fa-envelope"></i> lynechacha@gmail.com</a></li> 
+                <li><a href="https://www.linkedin.com/in/lynecha/" target="_blank" rel="noopener"><i class="fa-brands fa-linkedin"></i></i> https://linkedin.com/in/lynecha</a></li>
             </ul>
     </section>
 </body>
