--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <div class="about-me" id="about">
     <section>
-        <h3>About</h3>
+        <h3>ABOUT</h3>
         <h1 style="margin-bottom: 20px">Let me introduce myself</h1>
             <img src="lynecha.jpg" class="prof-pic">
                 <p style="margin-bottom: 32px">I graduated from UC Berkeley with an Economics degree back in 2019 and worked as an accoutant at PwC for the past 2 years.
@@ -55,7 +55,7 @@
 </div>
 <div class="projects" id="projects">
     <section>
-        <h3 style="margin-bottom: 20px">Projects</h3>
+        <h3 style="margin-bottom: 20px">PROJECTS</h3>
         <h1>What I'm working on</h1>    
         <div class="container">
             <div id="project1"></div>
@@ -71,8 +71,8 @@
     </section>
 </div>
     <section class="contact" id="contact">
-        <h3>Contact</h3>
-        <h1>I'd Love To Connect With You</h1>
+        <h3>CONTACT</h3>
+        <h1>I'd love to connect with you</h1>
             <ul class="footer-nav">
                 <li><a href="https://github.com/lynecha" target="_blank" rel="noopener"><i class="fa-brands fa-github"></i> https://github.com/lynecha</a></li> 
                 <li><a href="mailto:lynechacha@gmail.com" target="_blank" rel="noopener"><i class="fa fa-envelope"></i> lynechacha@gmail.com</a></li> 
