--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class = "title">
         <div class = "name">
             <h1>Lyne Cha</h1>
-            <h3>Software&nbsp;Engineer |&nbsp;Accountant</h3>
+            <h3>Software&nbsp;Engineer&nbsp;|&nbsp;Accountant</h3>
             <ul class="social">
                 <div class= "icons">
                     <li><a href="https://github.com/lynecha" target="_blank" rel="noopener"><i class="fa-brands fa-github"></i></a></li>
