--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav class = "nav">
             <ul>
-                <li><a href="#"> Home</a></li>
+                <li><a href="#home"> Home</a></li>
                 <li><a href="#about"> About</a></li>
                 <li><a href="#projects"> Projects</a></li>
                 <li><a href="https://docs.google.com/document/d/1ftEGI4X7KEDTmrXiAGetZymxsA93kYfaA4jFgAWXM5k/edit?usp=sharing" target="_blank" rel="noopener">Resume</a></li>
@@ -24,7 +24,7 @@
         </nav>
     
         
-    <div class = "title">
+    <div class = "title" id="home">
         <div class = "name">
             <h1>Lyne Cha</h1>
             <h3>Software&nbsp;Engineer&nbsp;|&nbsp;Accountant</h3>
